syntax = "proto3";

package tenant;
  
option go_package = "./tenant";

message TenantDetailReq {
    string name = 1;
}
message TenantDetailRsp {
    // 租户名称
    string id = 1;
    // 租户名称
    string name = 2;
    // 用户地址
    string addr = 3;
}
  
message TenantListReq {

}


message TenantListRsp {
    // 租户 id
    repeated string name = 1;
}


  
service Tenant {
    rpc get_tenant_detail(TenantDetailReq) returns(TenantDetailRsp);
    rpc get_tenant_list(TenantListReq) returns(TenantListRsp);
}
